Add support for todo-language

--- a/fixtures/fixture.cshtml
+++ b/fixtures/fixture.cshtml
@@ -1,1 +1,3 @@
-@* @ToDo: 3 this is an example of CSHTML ToDO file  *@
+@* TODO: 1 CSHTML This is an example of todo file  *@
+@* TODO: 2 CSHTML This is an example of todo file  *@
+@* @TODO: 3 CSHTML This is an example of todo file  *@
