--- a/fixtures/fixture.css
+++ b/fixtures/fixture.css
@@ -1,2 +1,3 @@
-/* @ToDo: 1 This is a high priority todo in CSS */
-/* @ToDo: 3 This is a low priotity todo in CSS */
+/* @TODO: 1 CSS This is a high priority todo */
+/* TODO: 2 CSS This is an example of medium priority todo */
+/* @TODO: 3 CSS This is a low priotity todo in */
