--- a/fixtures/fixture.pug
+++ b/fixtures/fixture.pug
@@ -1,2 +1,3 @@
-//- @ToDO: 1 This is a high priority pug todo file
-//- @ToDO: 3 This is a low priority pug todo file
+//- @TODO: 1 Pug This is a high priority todo file
+//- TODO: 2 Pug This is a medium priority todo file
+//- @TODO: 3 Pug This is a low priority todo file
