Add test for CSS language

--- a/fixtures/fixture.css
+++ b/fixtures/fixture.css
@@ -1,3 +1,4 @@
-/* @TODO: 1 CSS This is a high priority todo */
-/* TODO: 2 CSS This is an example of medium priority todo */
-/* @TODO: 3 CSS This is a low priotity todo in */
+/* @TODO: CSS This is an unclassified priority task */
+/* @TODO: 1 CSS This is an high priority task */
+/* TODO: 2 CSS This is an medium priority task */
+/* @TODO: 3 CSS This is a low priority task */
