--- a/fixtures/fixture.less
+++ b/fixtures/fixture.less
@@ -1,3 +1,4 @@
-// TODO: 1 LESS This is a high priority in file
-// TODO: 2 LESS This is a medium priority in file
-// TODO: 3 LESS This is a low priority in file
+// TODO: Less This is a unclassified priority task
+// TODO: 1 Less This is a high priority task
+// TODO: 2 Less This is a medium priority task
+// TODO: 3 Less This is a low priority task
