--- a/fixtures/fixture.css
+++ b/fixtures/fixture.css
@@ -1,4 +1,4 @@
-/* @TODO: CSS This is an unclassified priority task */
-/* @TODO: 1 CSS This is an high priority task */
-/* TODO: 2 CSS This is an medium priority task */
-/* @TODO: 3 CSS This is a low priority task */
+/* @TODO: css This is an unclassified priority task */
+/* @TODO: 1 css This is an high priority task */
+/* TODO: 2 css This is an medium priority task */
+/* @TODO: 3 css This is a low priority task */
