--- a/fixtures/fixture.less
+++ b/fixtures/fixture.less
@@ -1,4 +1,4 @@
-// TODO: Less This is a unclassified priority task
-// TODO: 1 Less This is a high priority task
-// TODO: 2 Less This is a medium priority task
-// TODO: 3 Less This is a low priority task
+// TODO: less This is a unclassified priority task
+// TODO: 1 less This is a high priority task
+// TODO: 2 less This is a medium priority task
+// TODO: 3 less This is a low priority task
