--- a/fixtures/fixture.pug
+++ b/fixtures/fixture.pug
@@ -1,3 +1,4 @@
-//- @TODO: 1 Pug This is a high priority todo file
-//- TODO: 2 Pug This is a medium priority todo file
-//- @TODO: 3 Pug This is a low priority todo file
+//- TODO: 1 Pug This is an unclassified priority task
+//- TODO: 1 Pug This is an high priority task
+//- TODO: 2 Pug  This is an medium priority task
+//- TODO: 3 Pug This is an low priority task
