Add test for all languages

--- a/fixtures/fixture.cshtml
+++ b/fixtures/fixture.cshtml
@@ -1,3 +1,4 @@
-@* TODO: 1 CSHTML This is an example of todo file  *@
-@* TODO: 2 CSHTML This is an example of todo file  *@
-@* @TODO: 3 CSHTML This is an example of todo file  *@
+@* TODO: cshtml This is an unclassified priority task *@
+@* TODO: 1 cshtml This is a high priority task *@
+@* TODO: 2 cshtml This is a medium priority task *@
+@* TODO: 3 cshtml This is a low priority task *@
