--- a/fixtures/fixture.pug
+++ b/fixtures/fixture.pug
@@ -1,4 +1,4 @@
-//- TODO: 1 Pug This is an unclassified priority task
-//- TODO: 1 Pug This is an high priority task
-//- TODO: 2 Pug  This is an medium priority task
-//- TODO: 3 Pug This is an low priority task
+//- TODO: pug This is an unclassified priority task
+//- TODO: 1 pug This is a high priority task
+//- TODO: 2 pug  This is a medium priority task
+//- TODO: 3 pug This is a low priority task
