--- a/fixtures/fixture.scss
+++ b/fixtures/fixture.scss
@@ -1,3 +1,4 @@
-// TODO: 1 SCSS This is a high priority todo file
-// TODO: 2 SCSS This is a medium priority todo file
-// TODO: 3 SCSS This is a low priority todo file
+// TODO: scss This is an unclassified priority task
+// TODO: 1 scss This is a high priority task
+// TODO: 2 scss This is a medium priority task
+// TODO: 3 scss This is a low priority task
