--- a/fixtures/fixture.styl
+++ b/fixtures/fixture.styl
@@ -1,3 +1,4 @@
-//- TODO: 1 Stylus This is a high priority todo file
-//- TODO: 2 Stylus This is a medium priority todo file
-//- TODO: 3 Stylus This is a low priority todo file
+//- TODO: styl This is an unclassified priority task
+//- TODO: 1 styl This is a high priority task
+//- TODO: 2 styl This is a medium priority task
+//- TODO: 3 styl This is a low priority task
